# UnionFind

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  README.rst  requirements.txt  run_clang_format.sh  setup.py
.github/workflows/: wheel_linux_aarch64.yml  wheel_linux_ppc64le.yml  wheel_linux_x86_64.yml  wheel_macos_arm64.yml  wheel_macos_x86_64.yml  wheel_win_x86_64.yml
Test/: TestGenerateSyndromes.cpp  TestLogical.cpp  TestUnionFind.cpp
UnionFindPy/: _version.py  decoder.py
UnionFindPy/cpp/: .clang-format  .clang-tidy
UnionFindPy/cpp/binding/: UnionFindPy.cpp
UnionFindPy/cpp/build_utils/: cpp_files.py
UnionFindPy/cpp/examples/: CMakeLists.txt  LatticeCubic.hpp  LazyDecoder.hpp  error_utils.cpp  run_uf_2d_bitflip.cpp  run_uf_3d_bitflip.cpp  runner_utils.cpp  runner_utils.hpp  toric_utils.hpp  typedefs.hpp
UnionFindPy/cpp/include/: Decoder.hpp  LatticeConcept.hpp  LatticeFromParity.hpp  RootManager.hpp  utility.hpp
UnionFindPy/cpp/src/: utility.cpp
UnionFindPy/cpp/tests/: CMakeLists.txt  test_LatticeFromParity.cpp
docs/: .gitignore  Makefile  conf.py  custom_lattice.rst  development.rst  index.rst  install.rst  python_api.rst  requirements.txt  usage.rst
examples/: bench_decoder.py  plot_toric_threshold.py  plot_toric_threshold_noisy.py  run_uf_2d_bitflip.cpp  run_uf_2d_depol.cpp  run_uf_3d_bitflip.cpp  run_uf_3d_depol.cpp  test_toric.py  test_toric_noisy.py  toric_utils.cpp  utility.cpp  utils.py
include/: ErrorGenerator.hpp  Lattice2D.hpp  LatticeCubic.hpp  LazyDecoder.hpp  RootManager.hpp  UnionFind.hpp  cpp_utils.hpp  error_utils.hpp  toric_utils.hpp  utility.hpp
python_utils/: plot_toric.py  test.py  test_toric.py  test_toric_noisy.py  utils.py
src/: RunUnionFind.cpp  RunUnionFind2D.cpp  RunUnionFind2D_bitflip.cpp  RunUnionFind2D_bitflip_lazy.cpp  RunUnionFind3D.cpp  UF3D-crossing.cpp  UnionFindPy.cpp  cpp_utils.cpp  error_utils.cpp  measure_time.cpp  run_uf_2d_bitflip.cpp  run_uf_2d_bitflip_lazy.cpp  run_uf_2d_depol.cpp  run_uf_2d_depol_lazy.cpp  run_uf_2d_depol_mpi.cpp  run_uf_3d_bitflip.cpp  run_uf_3d_depol.cpp  run_uf_3d_depol_mpi.cpp  toric_utils.cpp  utility.cpp
tests/: CMakeLists.txt  TestGenerateSyndromes.cpp  test_decoder.py
union_find/: __init__.py  _version.py  decoder.py
union_find/cpp/: .clang-tidy  CMakeLists.txt  Makefile
union_find/cpp/binding/: UnionFindPy.cpp
union_find/cpp/build_utils/: cpp_files.py  format_cpp.sh
union_find/cpp/examples/: CMakeLists.txt  Lattice2D.hpp  LatticeCubic.hpp  LazyDecoder.hpp  Runner.hpp  error_utils.cpp  error_utils.hpp  run_uf_2d_bitflip.cpp  run_uf_2d_depol.cpp  run_uf_3d_bitflip.cpp  run_uf_3d_depol.cpp  toric_utils.cpp  toric_utils.hpp
union_find/cpp/include/: Decoder.hpp  LatticeConcept.hpp  LatticeFromParity.hpp  RootManager.hpp  utility.hpp
union_find/cpp/tests/: CMakeLists.txt  test_LatticeFromParity.cpp
union_find/src/: CMakeLists.txt
union_find/src/binding/: LatticFromParity.hpp  UnionFindPy.cpp
union_find/src/decoder/: Decoder.hpp  LatticeConcept.hpp  UnionFind.hpp
union_find/src/utils/: utility.cpp  utility.hpp
